Changes to project

--- a/MVPProjectOne/Web.config
+++ b/MVPProjectOne/Web.config
@@ -77,5 +77,6 @@
       providerName="System.Data.SqlClient" />
     <add name="MVPProjectOneContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MVPProjectOneContext-20180515210424; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVPProjectOneContext-20180515210424.mdf"
       providerName="System.Data.SqlClient" />
+    <!--<add name="MVPProjectOneContext" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FGM02IR;initial catalog=MVPTestProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
 </configuration>
